--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				for (var i = 0; i < BOOK_COUNT; i++) {
 					var book = BOOKS[i];
 					if (book['Title'] == entity.name) {
-						index = book.index;
+						index = book.index + 1;
 						break;
 					}
 				}
