--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			};
 			if (window.mobilecheck() == true) {
 				document.getElementById('controls').style.visibility = 'hidden';
-				alert('If you come back with a mouse and keyboard, you can zip around with the flight controls.')
+				alert('If you come back with a mouse and keyboard, you can zip around using the flight controls.')
 			}
 		</script>
 	</body>
