--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<script src="js/lib/three.js"></script>
 		<script src="js/lib/Detector.js"></script>
 		<script src="js/lib/FlyControls.js"></script>
+		<script src="js/lib/OrbitControls.js"></script>
+		<!-- <script src="js/lib/TrackballControls.js"></script> -->
 		<!-- load the events data -->
 		<script src="data/books.js"></script>
 		<!-- initialize UI controls -->
