--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="icon" href="img/favicon.ico">
 	</head>
 	<body>
 		<!-- <script src="js/lib/ImageBitmapLoader.js"></script> -->
